--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		</div>	
 		<div class="row">
 			<div class="col-1-of-4">
-				col 1 of 4
+				c l 1 of 4
 			</div>
 			<div class="col-1-of-4">
 				col 1 of 4
@@ -337,6 +337,8 @@
 		</div>	
 
 	</section> -->
-       
+<footer class="footer">
+  <p>&copy; All Right Reserved | Bikash Thapa | 2019</p>
+</footer>
     </body>
 </html>
